# caliper-tutorial

./: .gitignore  .gitmodules  README.md  build.sh  setup-env.sh
apps/basic_example/: CMakeLists.txt  basic_example.cpp
cmake/: adiak-cori-mpi.cmake  adiak-cuda.cmake  adiak-default.cmake  adiak-mpi.cmake  caliper-cori-mpi.cmake  caliper-cuda.cmake  caliper-default.cmake  caliper-juwels.cmake  caliper-mpi.cmake  lulesh-cori-mpi.cmake  lulesh-cuda.cmake  lulesh-default.cmake  lulesh-mpi.cmake  tealeaf_cuda-juwels.cmake  xsbench-cori-mpi.cmake  xsbench-cuda.cmake  xsbench-default.cmake  xsbench-juwels.cmake  xsbench-mpi.cmake
tutorial/: HatchetCaliperImport.ipynb  README.md  analysis_with_caliquery.md  analyzing_cuda_codes.md  configmanager.md  hatchet_caliper_import.py  hatchet_comparison.py  profiling_mpi.md  recording_for_thicket.md  recording_hatchet.md  recording_metadata.md  region_profiling.md
tutorial/data/: lulesh_mpi_x1.cali  lulesh_mpi_x1.json  lulesh_mpi_x8.cali  lulesh_mpi_x8.json  lulesh_mpi_x8_s45.cali  lulesh_mpi_x8_s45.json  xsbench_cuda-activity-report.txt  xsbench_cuda-activity-report_kernels.txt  xsbench_cuda_kernels.cali  xsbench_cuda_kernels.json  xsbench_cuda_memcpy.json  xsbench_runtime-report.txt  xsbench_runtime-report_cuda.txt
